--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@angular/platform-browser": "~12.1.0-",
     "@angular/platform-browser-dynamic": "~12.1.0-",
     "@angular/router": "~12.1.0-",
+    "@sweetalert2/ngx-sweetalert2": "^10.0.0",
     "angular2-notifications": "^9.0.0",
     "bootstrap": "^4.5.3",
     "ngx-bootstrap": "^7.0.0",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.1.4",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
